--- a/client/src/styling/rides.css
+++ b/client/src/styling/rides.css
@@ -1,19 +1,116 @@
-.input-field {
-    width: 300px;
-}
-
 .container {
     /* background-color: brown; */
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    /* background-color: chartreuse; */
+}
+
+.card-container {
+    width: 100%;
+    text-align: left;
+    /* background-color: red; */
+}
+
+.card-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 20px;
+    grid-auto-flow: dense;
+}
+
+.detail-container {
+    grid-column: span 3;
+    /* background-color: forestgreen; */
+}
+
+.ride-card {
+    position: relative;
+    padding-top: 10px;
+    padding-bottom: 0px;
+    padding-left: 25px;
+    padding-right: 25px;
+    background-color: #dad2c1;
+    transition: all 0.3s ease-in-out;
+    /* background-color: blue; */
+}
+
+.ride-card-title {
+    font-size: 14pt;
+    text-align: left;
+    /* height: 25px; */
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    /* background-color: crimson; */
+}
+
+.map-date-container {
+    position: relative;
+}
+
+.map-preview {
+    width: 100%;
+    height: 20px;
+    background-color: cadetblue;
+}
+
+.date {
+    position: absolute;
+    bottom: 0;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 25%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #9eada5;
+}
+
+.date-number {
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+.miles-rating-lockup {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    margin-top: -15px;
+}
+
+.miles-lockup {
+    display: flex;
+    align-items: baseline;
+}
+
+.miles-integer {
+    font-size: 20pt;
+}
+
+.color-bar {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 10px;
+    width: 100%;
+}
+
+.divider {
+    margin-top: -1px;
+    width: 20px;
+    height: 2px;
+    background-color: #56666f;
 }
 
 .views-header {
     display: flex;
-    justify-content: space-between;
-    width: 40%;
+    justify-content: center;
+    /* width: 40%; */
     margin-top: -20px;
     margin-bottom: 15px;
     /* background-color: chocolate; */
@@ -21,6 +118,7 @@
 
 .login-button-container {
     width: 30%;
+    margin-bottom: 20px;
     /* background-color: red; */
 }
 
@@ -35,6 +133,7 @@
     background-color: #9eada5;
     color: #56666f;
     transition: transform 0.3s ease-in-out;
+    cursor: pointer;
 }
 
 .login-button:hover {
@@ -47,6 +146,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding-left: 30px;
+    padding-right: 30px;
     /* background-color: blueviolet; */
 }
 
@@ -54,7 +155,7 @@
     /* padding-left: 15px;
     padding-right: 15px; */
     transition: transform 0.3s ease-in-out;
-    color: #dad2c1;
+    color: #708a7c;
     cursor: pointer;
     font-family: 'Bebas Neue', sans-serif;
 }
@@ -63,7 +164,7 @@
     text-decoration: underline;
     text-decoration-thickness: 5px;
     text-underline-offset: 5px;
-    color: #dad2c1;
+    color: #708a7c;
 }
 
 .user-button:hover {
@@ -95,6 +196,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding-left: 30px;
+    padding-right: 30px;
     /* background-color: chartreuse; */
 }
 
