rides page mostly done, routes started

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -57,10 +57,9 @@ p {
   padding-bottom: 50px;
   padding-left: 50px;
   padding-right: 50px;
-  /* min-width: 50vw;
-  max-width: 70vw; */
-  min-height: 62vh;
-  width: 60vw;
+  min-width: 40vw;
+  max-width: 70vw;
+  min-height: 30vw;
   display: flex;
   justify-content: center;
   /* align-items: center; */
