--- a/client/src/styling/rides.css
+++ b/client/src/styling/rides.css
@@ -33,7 +33,6 @@
     padding-right: 50px;
     background-color: #dad2c1;
     transition: all 0.3s ease-in-out;
-    /* background-color: blue; */
 }
 
 .ride-card {
@@ -42,7 +41,9 @@
     padding-bottom: 10px;
     padding-left: 25px;
     padding-right: 25px;
+    min-width: 239px;
     background-color: #dad2c1;
+    /* height: 100%; */
     /* transition: all 0.3s ease-in-out; */
     /* background-color: blue; */
 }
@@ -60,12 +61,12 @@
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
+    max-width: 200px;
     /* background-color: crimson; */
 }
 
 .user-title {
     font-size: 10.5pt;
-    color: #9eada5;
     margin-top: -12px;
     margin-bottom: 10px;
 }
@@ -76,6 +77,8 @@
 
 .map-date-container {
     position: relative;
+    display: flex;
+    flex-direction: column;
     /* background-color: chocolate; */
 }
 
@@ -83,6 +86,11 @@
     width: 100%;
     height: 20px;
     background-color: cadetblue;
+}
+
+.map-image {
+    width: 100%;
+    height: 100%;
 }
 
 .edit-lockup {
@@ -250,12 +258,24 @@
     font-size: 14pt;
 }
 
-.color-bar {
+.color-bar-lockup {
+    display: flex;
+}
+
+.color-bar-user {
     position: absolute;
     left: 0;
     bottom: 0;
     height: 10px;
-    width: 100%;
+    width: 50%;
+}
+
+.color-bar-timeline {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    height: 10px;
+    width: 50%;
 }
 
 .divider {
