--- a/client/src/styling/rides.css
+++ b/client/src/styling/rides.css
@@ -300,6 +300,8 @@
     flex-direction: column;
     align-items: center;
     margin-bottom: 30px;
+    padding-top: 25px;
+    padding-bottom: 10px;
     background-color: #56666f;
 }
 
