--- a/client/src/styling/rides.css
+++ b/client/src/styling/rides.css
@@ -85,7 +85,7 @@
 .map-preview {
     width: 100%;
     height: 20px;
-    background-color: cadetblue;
+    /* background-color: cadetblue; */
 }
 
 .map-image {
@@ -145,8 +145,8 @@
 .time {
     font-size: 24pt;
     padding: 7px;
-    padding-left: 25px;
-    padding-right: 25px;
+    padding-left: 15px;
+    padding-right: 15px;
     border: 2px solid #9eada5;
     /* width: 100%; */
 }
@@ -206,8 +206,8 @@
     font-size: 24pt;
     margin-top: 0px;
     margin-bottom: 0px;
-    padding-left: 25px;
-    padding-right: 25px;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 .edit-miles-integer span {
