--- a/client/src/styling/home.css
+++ b/client/src/styling/home.css
@@ -1,7 +1,16 @@
+.home-container {
+    display: flex;
+    align-items: baseline;
+    justify-content: center;
+    /* background-color: blue; */
+    max-width: 75%;
+}
+
 .user-page {
     display: flex;
     flex-direction: column;
     align-items: center;
+    
     /* background-color: chocolate; */
 }
 
