--- a/client/src/styling/ride-creator.css
+++ b/client/src/styling/ride-creator.css
@@ -232,6 +232,14 @@
     position: relative;
 }
 
+.chosen-create-detail-container {
+    background-color: #2a344f;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .create-detail-container {
     background-color: #9eada5;
     cursor: pointer;
@@ -301,7 +309,7 @@
     font-family: 'Bebas Neue', sans-serif;
     font-size: 14px;
     border: none;
-    background-color: #2a344f;
+    /* background-color: #2a344f; */
     color: #56666f;
 }
 
@@ -320,6 +328,10 @@
 
 .top-right-buttons:hover {
     transform: scale(1.1);
+}
+
+.ready-for-ride {
+    margin-top: 12px;
 }
 
 .bottom-button {
