--- a/client/src/styling/routes.css
+++ b/client/src/styling/routes.css
@@ -1,3 +1,68 @@
-.user-leader {
-    color: red;
+.routes-container {
+    width: 60vw;
+    padding: 30px;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-bottom: 50px;
+    margin-bottom: 50px;
+    background-color: #dad2c1;
+}
+
+.route-title {
+    text-align: left;
+    margin-top: 5px;
+    /* background-color: aquamarine; */
+}
+
+.directions-full {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: -10px;
+    margin-bottom: 10px;
+    /* background-color: blue; */
+}
+
+.direction-origin {
+    flex: 0 0 auto;
+    margin: 0;
+}
+
+.direction-dest {
+    flex: 0 0 auto;
+    margin: 0;
+}
+
+.divider-to {
+    flex: 1;
+    height: 2px;
+    background-color: #56666f;
+    margin: 0 20px;
+}
+
+.map-stats-container {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.route-map-image {
+    width: 65%;
+    height: 65%;
+}
+
+.right-side-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 32%;
+    /* padding: 20px; */
+    background-color: #56666f;
+}
+
+.leader-title {
+    /* font-size: 20pt; */
+    margin-top: 35px;
+    margin-bottom: 10px;
+    color: #2a344f;
 }
