--- a/client/src/styling/routes.css
+++ b/client/src/styling/routes.css
@@ -66,3 +66,28 @@
     margin-bottom: 10px;
     color: #2a344f;
 }
+
+.be-the-first {
+    margin-top: 155px;
+    margin-bottom: 10px;
+    color: #2a344f;
+}
+
+.more-info {
+    align-self: center;
+    width: 100%;
+    padding: 5px;
+    font-family: 'Bebas Neue', sans-serif;
+    font-size: 16px;
+    border-radius: 15px 15px 15px 15px;
+    border: none;
+    background-color: #9eada5;
+    color: #56666f;
+    transition: transform 0.3s ease-in-out;
+    cursor: pointer;
+}
+
+.more-info:hover {
+    transform: scale(1.1);
+    background-color: #2a344f;
+}
